Bug 515585 - 5.3.0 Android beta causes the UI and Text scaling to be massive
Summary: 5.3.0 Android beta causes the UI and Text scaling to be massive
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 5.3.0-beta1
Platform: Android Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-02-05 23:53 UTC by vavaneka
Modified: 2026-02-11 22:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A collage of all screenshots showcasing comparisons of the symptoms above. (2.03 MB, image/png)
2026-02-05 23:53 UTC, vavaneka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vavaneka 2026-02-05 23:53:54 UTC
Created attachment 189264 [details]
A collage of all screenshots showcasing comparisons of the symptoms above.

SUMMARY
Clean install of the krita-arm64-v8a-5.3.0-beta1-release-signed.apk from the newest 5th Feb 2026 post. Launched it, and was welcomed by messed up UI and text scaling (no HiDPI support enabled)

STEPS TO REPRODUCE
1. download apk from https://download.kde.org/unstable/krita/5.3.0-beta1/krita-arm64-v8a-5.3.0-beta1-release-signed.apk
2. launch it without HiDPI support enabled (make sure Android and One UI version matches)
3. experience the anxiety of a cramped environment

OBSERVED RESULT
The text seems to be incredibly massive so much so it often gets cropped by other elements, some UI elements have also suffered, no settings change anything except for HiDPI support. Enabling the HiDPI support setting only slightly helps (especially with text), but will still scale UI elements to be too big, much bigger than I'm used to!


EXPECTED RESULT
I will attach some old screenshots of my workspace, with the UI size that I'm expecting and am used to, the last version did not cause such problems and I have not changed any settings inbetween these before and after screenshots.


SOFTWARE/OS VERSIONS
Android: 16
One UI: 8

ADDITIONAL INFORMATION
I have attached the labeled screenshots below. I am sorry I cannot provide more specific information :( Thank you for your incredibly hard work ♡
Comment 1 dra.w.p.il.e+bugskde 2026-02-06 13:59:57 UTC
Confirmed on a Samsung S6 Lite tablet. It seems like it's just the font that's large and is stretching other parts of the UI to make it fit, since anything that doesn't have text on it scales to the correct site.

The setting to disable is under Settings → Configure Krita → General → Window→ Enable HiDPI support.
Comment 2 vavaneka 2026-02-06 16:00:44 UTC
(In reply to dra.w.p.il.e+bugskde from comment #1)
> Confirmed on a Samsung S6 Lite tablet. It seems like it's just the font
> that's large and is stretching other parts of the UI to make it fit, since
> anything that doesn't have text on it scales to the correct site.
> 
> The setting to disable is under Settings → Configure Krita → General →
> Window→ Enable HiDPI support.

Hello! Thank you so much for confirming the issue,  unfortunately I'm not sure what you mean by disabling the setting. I have attached screenshots showcasing the issue being present ONLY when HiDPI is disabled :( unsure as to why!
You're also correct, It seems to be a font/text issue indeed!
Comment 3 dra.w.p.il.e+bugskde 2026-02-06 16:42:21 UTC
The comment about disabling the setting was just to clarify it for other developers or testers that might look into this. You said "launch it without HiDPI support enabled (make sure Android and One UI version matches)", which made it sound like it's something you have to disable in Android, not a setting in Krita.
Comment 4 vavaneka 2026-02-06 17:12:50 UTC
(In reply to dra.w.p.il.e+bugskde from comment #3)
> The comment about disabling the setting was just to clarify it for other
> developers or testers that might look into this. You said "launch it without
> HiDPI support enabled (make sure Android and One UI version matches)", which
> made it sound like it's something you have to disable in Android, not a
> setting in Krita.

Oh I'm sorry! You're right, that makes more sense, thank you!!
Comment 5 Bug Janitor Service 2026-02-11 07:46:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2641
Comment 6 dra.w.p.il.e+bugskde 2026-02-11 22:52:07 UTC
Git commit cdef2ecc08707ab8f3beac31a5323d0c75146273 by Carsten Hartenfels.
Committed on 11/02/2026 at 22:49.
Pushed by hartenfels into branch 'master'.

[android] Make pixel size fonts work properly

This reverts commit ac4ae78dd73d11fa021fa52fff466630b49e53f8 because it
breaks the font sizing when disabling UI scaling. Instead it now
properly handles all places that want to change a font's relative size
by checking whether the font was in pixels or points.

Places that just set the font to a fixed point size aren't a problem, so
they've been left untouched.

M  +14   -8    libs/ui/KisUiFont.cpp
M  +7    -1    libs/ui/KisWelcomePageWidget.cpp
M  +7    -1    libs/ui/toolbox/KoToolBoxDocker.cpp
M  +8    -2    plugins/dockers/animation/KisAnimTimelineColors.cpp
M  +6    -1    plugins/dockers/gamutmask/KisGamutMaskChooser.cpp

https://invent.kde.org/graphics/krita/-/commit/cdef2ecc08707ab8f3beac31a5323d0c75146273