[android] Make pixel size fonts work properly

This reverts commit ac4ae78dd73d11fa021fa52fff466630b49e53f8 because it
breaks the font sizing when disabling UI scaling. Instead it now
properly handles all places that want to change a font's relative size
by checking whether the font was in pixels or points.

Places that just set the font to a fixed point size aren't a problem, so
they've been left untouched.

BUG:515585